# USTC_CG

./: README.md
Homeworks/1_MiniDraw/project/src/App/: CEllipse.cpp  CEllipse.h  CFigure.cpp  CFigure.h  CFreehand.cpp  CFreehand.h  CPolygon.cpp  CPolygon.h  Line.cpp  Line.h  Rect.h  minidraw.cpp  minidraw.h  viewwidget.cpp  viewwidget.h
Homeworks/2_ImageWarping/project/src/App/: ImageWidget.cpp  ImageWidget.h  Warpper.cpp  Warpper.h  WarpperIDW.cpp  WarpperIDW.h  WarpperList.cpp  WarpperList.h  WarpperRBF.cpp  WarpperRBF.h  mainwindow.cpp  mainwindow.h
Homeworks/3_PoissonImageEditing/project/: CMakeLists.txt
Homeworks/3_PoissonImageEditing/project/src/App/: CFigure.cpp  CFigure.h  CMakeLists.txt  CPolygon.cpp  CPolygon.h  CRect.cpp  CRect.h  Freedraw.h  ImagePaste.cpp  ImagePaste.h  ImageWidget.cpp  ImageWidget.h  ScanLine.cpp  ScanLine.h  mainwindow.cpp  mainwindow.h
Homeworks/4_MinSurfMeshPara/documents/: README.md
Homeworks/4_MinSurfMeshPara/project/: CMakeLists.txt
Homeworks/4_MinSurfMeshPara/project/src/UI/: Attribute.cpp
Homeworks/6_MassSpring/documents/: README.md
Homeworks/7_SimulationTaichi/project/: CMakeLists.txt
Homeworks/7_SimulationTaichi/project/src/app/: main.cpp
Homeworks/8_Shader/project/: CMakeLists.txt
Homeworks/8_Shader/project/data/shaders/: debug_shadow.vert  dn.vert  dn_displacement.vert  light_dn.frag  light_dn_displacement.frag  light_shadow.frag  p3t2n3_denoise.vert
Homeworks/9_PathTracing/documents/: README.md
Homeworks/9_PathTracing/project/data/models/: my_scene.json  my_scene_night.json
(+44 files in other folders)
